--- a/src/_includes/partials/home-carousel.html
+++ b/src/_includes/partials/home-carousel.html
@@ -5,43 +5,43 @@
     <!-- Slides -->
 
     <div class="flex align-middle swiper-slide">
-      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="images/home/clients/cjc.svg" alt="CJC"></div>
+      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="/images/home/clients/cjc.svg" alt="CJC"></div>
     </div>
     <div class="flex align-middle swiper-slide">
-      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="images/home/clients/atm.svg" alt="ATM"></div>
+      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="/images/home/clients/atm.svg" alt="ATM"></div>
     </div>
     <div class="flex align-middle swiper-slide">
-      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="images/home/clients/maxpost.svg" alt="MaxPost"></div>
+      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="/images/home/clients/maxpost.svg" alt="MaxPost"></div>
     </div>
     <div class="flex align-middle swiper-slide">
-      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="images/home/clients/exodus.svg" alt="Exodus Recovery"></div>
+      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="/images/home/clients/exodus.svg" alt="Exodus Recovery"></div>
     </div>
     <div class="flex align-middle swiper-slide">
-      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="images/home/clients/dga.svg" alt="DGA"></div>
+      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="/images/home/clients/dga.svg" alt="DGA"></div>
     </div>
     
 
     <div class="flex align-middle swiper-slide">
-      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="images/home/clients/razor.svg" alt="Razor logo"></div>
+      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="/images/home/clients/razor.svg" alt="Razor logo"></div>
     </div>
     <div class="flex align-middle swiper-slide">
-      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="images/home/clients/roland.svg" alt="Roland logo"></div>
+      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="/images/home/clients/roland.svg" alt="Roland logo"></div>
     </div>
     <div class="swiper-slide">
-      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="images/home/clients/axs.svg" alt="AXS logo"></div>
+      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="/images/home/clients/axs.svg" alt="AXS logo"></div>
     </div>
     <div class="flex align-middle swiper-slide">
-      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="images/home/clients/computacenter.svg" alt="Computacenter logo"></div>
+      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="/images/home/clients/computacenter.svg" alt="Computacenter logo"></div>
     </div>
     <div class="flex align-middle swiper-slide">
-      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="images/home/clients/fremantle.svg" alt="Fremantle logo"></div>
+      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="/images/home/clients/fremantle.svg" alt="Fremantle logo"></div>
     </div>
 
     <div class="flex align-middle swiper-slide">
-      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="images/home/clients/mnx.svg" alt="MNX logo"></div>
+      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="/images/home/clients/mnx.svg" alt="MNX logo"></div>
     </div>
     <div class="flex align-middle swiper-slide">
-      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="images/home/clients/op.svg" alt="ORIGINAL Productions by Fremantle Company logo"></div>
+      <div class="grid place-items-center w-full"><img class="block mx-auto" height="64" src="/images/home/clients/op.svg" alt="ORIGINAL Productions by Fremantle Company logo"></div>
     </div>
 
 
